# tomlplus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  release.py
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
bindings/tomlplus-dotnet/: README.md  Tomlplus.cs  Tomlplus.csproj
bindings/tomlplus-dotnet/Tomlplus.Tests/: Tomlplus.Tests.csproj  TomlplusTests.cs
bindings/tomlplus-go/: README.md  go.mod  io.go  tomlplus.go  tomlplus_test.go
bindings/tomlplus-java/: README.md  bootstrap-gradle.ps1  build.gradle.kts  settings.gradle.kts
bindings/tomlplus-java/src/main/java/com/tomlplus/: Tomlplus.java
bindings/tomlplus-java/src/test/java/com/tomlplus/: TomlplusTest.java
bindings/tomlplus-ruby/: README.md  tomlplus.gemspec
bindings/tomlplus-ruby/lib/: tomlplus.rb
bindings/tomlplus-ruby/test/: test_tomlplus.rb
crates/tomlplus-cli/: Cargo.toml
crates/tomlplus-cli/src/: main.rs
crates/tomlplus-ffi/: Cargo.toml
crates/tomlplus-ffi/include/: tomlplus.h
crates/tomlplus-ffi/src/: lib.rs
crates/tomlplus-lsp/: Cargo.toml
crates/tomlplus-lsp/src/: main.rs  server.rs
crates/tomlplus-node/: Cargo.toml  index.d.ts  index.js  package.json  test.mjs
crates/tomlplus-node/src/: lib.rs
crates/tomlplus-python/: Cargo.toml  README.md  pyproject.toml
crates/tomlplus-python/python/tomlplus/: __init__.py  _native.pyd  _native.pyi
crates/tomlplus-python/src/: lib.rs
crates/tomlplus-python/tests/: test_compat.py
crates/tomlplus-syntax/: Cargo.toml
crates/tomlplus-syntax/src/: annotation.rs  dumper.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs  validator.rs  value.rs  value_parser.rs
crates/tomlplus-wasm/: Cargo.toml  README.md  test.mjs
crates/tomlplus-wasm/src/: lib.rs
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
editors/vscode/client/: extension.ts
editors/vscode/syntaxes/: tomlplus.tmLanguage.json
examples/: kitchen-sink.tomlp
scripts/: check-package-availability.py
tests/cross-binding/: run.py
tests/cross-binding/fixtures/: expected.json  kitchen-sink.tomlp
tests/cross-binding/harness/: node.js  python.py  ruby.rb  wasm.mjs
tests/cross-binding/harness/dotnet/: Harness.csproj  Program.cs
tests/cross-binding/harness/go/: go.mod  main.go
tests/cross-binding/harness/java/: build.gradle.kts  settings.gradle.kts
tests/cross-binding/harness/java/src/main/java/com/tomlplus/test/: Harness.java
