[package]
name        = "tomlplus-ffi"
description = "C ABI bindings to the TOML+ language core. Foundation for non-Rust language wrappers."
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }

[lib]
# Both forms — Go/Ruby/Java want the shared library; some C builds want static.
name       = "tomlplus_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tomlplus-syntax = { workspace = true }
serde_json      = { workspace = true }
