[package]
name        = "tomlplus-lsp"
description = "Language Server Protocol implementation for TOML+"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }

[[bin]]
name = "tomlplus-lsp"
path = "src/main.rs"

[dependencies]
tomlplus-syntax = { workspace = true }
tokio           = { workspace = true }
tower-lsp       = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
ropey           = { workspace = true }
dashmap         = { workspace = true }
