[package]
name        = "tomlplus-node"
description = "Node.js bindings (napi-rs) for the TOML+ language core"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
tomlplus-syntax = { workspace = true }
napi            = { version = "2.16", default-features = false, features = ["napi6", "serde-json"] }
napi-derive     = "2.16"
serde           = { workspace = true }
serde_json      = { workspace = true }

[build-dependencies]
napi-build = "2.1"
