[package]
name        = "tomlplus-wasm"
description = "WebAssembly bindings for the TOML+ language core (browser / Node / Deno / Bun / Workers)"
# Fields below are inlined (not `{ workspace = true }`) because wasm-pack's
# bundled manifest parser doesn't understand workspace inheritance on some
# older arm64-macOS builds shipped by jetli/wasm-pack-action.
version     = "2.0.0"
edition     = "2021"
license     = "MIT"
authors     = ["Carson Kopec <kopeccarson@gmail.com>"]
repository  = "https://github.com/CarsonKopec/tomlplus"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tomlplus-syntax    = { workspace = true }
wasm-bindgen       = "0.2"
serde-wasm-bindgen = "0.6"
serde              = { workspace = true }
serde_json         = { workspace = true }
js-sys             = "0.3"
console_error_panic_hook = "0.1"
# Note: release-profile tuning lives in the workspace root Cargo.toml.

# Skip wasm-opt — recent Rust output trips the bundled (older) wasm-opt
# binary. Re-enable when wasm-pack ships a newer one.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
